<resources>
    <string name="app_name">Quizrific</string>


    <string name="username">username</string>
    <string name="password">password</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="e_mail">e-mail</string>
    <string name="firstname">first name</string>
    <string name="lastname">last name</string>
    <string name="nav_home">Home</string>
    <string name="nav_progress">Progress</string>
    <string name="nav_practice">Practice</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_challenge">Challenge</string>


    <string-array name="birthday_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="year_array">
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_results">Results</string>
    <string name="nav_growth">Growth</string>
    <string name="title_activity_menu_prof">menuProfActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_quizzes">Quizzes</string>
    <string name="test">test</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="create_quiz">Create Quiz</string>


    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Any</item>
    </string-array>

    <string-array name="category_array">
        <item>General Knowledge</item>
        <item>Books</item>
        <item>Movies</item>
        <item>Video Games</item>
        <item>Science&amp;Nature</item>
        <item>Computers</item>
        <item>Geography</item>
        <item>History</item>
        <item>Any</item>
    </string-array>

    <string-array name="amount_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="courses_array">
        <item> </item>
    </string-array>

    <string-array name="depts_array">
        <item>Select department</item>
    </string-array>

    <string-array name="quizzes_array">
        <item>Select quiz</item>
    </string-array>

    <string-array name="duration_array">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="view_quizzes">View Quizzes</string>


</resources>
